--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -35,6 +35,14 @@
     <div class="helpR borderGray fnRight">
     	<h2>新手上路</h2>
         <ul class="newGuide">
+         	<li>
+            	<p><img src="{{ asset('images1408/help/icon05.png') }}" width="99" height="100"/></p>
+                <dl>
+                    <dt>淘宝购物买买买</dt>
+                    <dd>每月都有给力活动，额外获得丰厚奖励！</dd>
+                    <dd><span class="more"><a href="{{ path('_default_support', {'channel':'tao'}) }}">快去了解</a></span></dd>
+                </dl>
+            </li>
         	<li>
             	<p><img src="{{ asset('images1408/help/icon01.png') }}" width="99" height="105"/></p>
                 <dl>
@@ -70,6 +78,33 @@
         </ul>
         <div class="newGuideDetail fnHide">
         	<h3>购物返利享不停</h3>
+            <ul class="taobao">
+                <li>
+                    <p><strong></strong>复制淘宝/天猫商品标题，到积粒网搜索。</p>
+                    <div class="guideImg"><img src="{{ asset('images1408/help/guide05Step01.jpg') }}" width="663" height="112"/></div>
+                </li>
+                <li>
+                    <p><strong class="icon02"></strong>搜索标题会跳到爱淘宝。</p>
+                    <div class="guideImg"><img src="{{ asset('images1408/help/guide05Step02.jpg') }}" width="663" height="88"/></div>
+                    <div class="guideImg">
+                    	<div class="intro">
+                            <p>您还可以通过以下方式跳到爱淘宝：</p>
+                            <div><img src="{{ asset('images1408/help/guide05Step02_1.jpg') }}" width="289" height="150" class="hasSpace"/><img src="{{ asset('images1408/help/guide05Step02_2.jpg') }}" width="293" height="150"/></div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <p><strong class="icon03"></strong>选择您喜欢的商品。</p>
+                    <div class="guideImg"><img src="{{ asset('images1408/help/guide05Step03.jpg') }}" width="663" height="224"/></div>
+                </li>
+                <li>
+                    <p><strong class="icon04"></strong>购买商品，您将有机会参加积粒网的活动，赢取米粒。</p>
+                    <div class="guideImg"><img src="{{ asset('images1408/help/guide05Step04.jpg') }}" width="663" height="153"/></div>
+                </li>
+                <li class="arrows"></li>
+				<li class="arrows arrow02"></li>
+                <li class="arrows arrow03"></li>
+        	</ul>
         	<ul>
                 <li>
                     <p><strong>第一步</strong>请先免费注册积粒网，如有积粒账户，请<a href="{{ path('_user_login') }}">登录</a>后，点击“商家列表”。</p>
