--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
@@ -28,7 +28,7 @@
         <div class="mainTopCon">
             <div class="splitLv">
                 <div class="splitLvCon">
-                    <div class="splitLvImg"><img src="{{ asset('images/january/lv1.png')}}" width="614" height="387" alt="万人抢红包"/></div>
+                    <div class="splitLvImg"><img src="{{ asset('images/january/lv1.gif')}}" width="614" height="500" alt="万人抢红包"/></div>
                     <div class="splitLvTxt">再拼<span class="needNum"></span>单，瓜分<strong><img src="{{ asset('images/january/lv1Txt.png')}}" width="104" height="34" /></strong>米粒</div>
                 </div>
             </div>
