--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -36,7 +36,7 @@
     	<h2>新手上路</h2>
         <ul class="newGuide">
          	<li>
-            	<p><img src="{{ asset('images1408/help/icon05.png') }}" width="99" height="100"/></p>
+            	<p><img src="{{ asset('images1408/help/icon05.png') }}" width="99" height="99"/></p>
                 <dl>
                     <dt>淘宝购物买买买</dt>
                     <dd>每月都有给力活动，额外获得丰厚奖励！</dd>
@@ -54,7 +54,7 @@
             <li>
             	<p><img src="{{ asset('images1408/help/icon02.png') }}" width="99" height="100"/></p>
                 <dl>
-                    <dt>广告体验赚米粒</dt>
+                    <dt>体验广告赚米粒</dt>
                     <dd>玩玩小游戏、做做问卷，米粒轻松到手！</dd>
                     <dd><span class="more">快去了解</span></dd>
                 </dl>
