--- a/src/Jili/EmarBundle/Resources/views/Search/form.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Search/form.html.twig
@@ -9,7 +9,7 @@
             <div class="tbTipsWrap">
                 <a class="tbTipsIco"></a>
                 <div class="tbTipsCon">
-                    <em></em>通过这里去爱淘宝购物，可参加<a style="text-decoration:underline;" href="{{ path('jili_api_monthactivity_gatheringindex',{'l':7}) }}" target="_blank">抱团大作战</a>活动，拼满1000单就可瓜分<a>888,888</a>米粒
+                    <em></em>通过这里去爱淘宝购物，可参加<a style="text-decoration:underline;" href="{{ path('jili_api_monthactivity_gatheringindex',{'l':7}) }}" target="_blank">抱团大作战</a>活动，拼满1000单即可瓜分<a>888,888</a>米粒
                 </div>
             </div>
         </div>
