#618 首页广告和文字

--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -75,8 +75,7 @@
         <div class="activityAdBg"></div>
         <span class="close"></span>
         <div class="btns">
-            <a href="{{ path('jili_api_monthactivity_gatheringindex', {'l':6}) }}" class="goBtn"></a>
-            <span class="closeBtn"></span>
+            <a href="{{ path('jili_api_monthactivity_gatheringindex', {'l':6}) }}" class="goBtn"><img src="{{ asset('images/january/gobtn.png')}}" /></a>
         </div>
         <div class="adMask"></div>
     </div>
