#618 淘宝专页文字修改

--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -17,7 +17,7 @@
     <div class="taobaoWrap">
         <div class="itemL">
             <div class="taobaoNotice">
-                <em></em>凡通过积粒网登录此页面购物的会员，当月即有机会参与抽奖，最高抽奖金额为5000积分，该页面使用抽奖原则代替返利原则。
+                <em></em>在此页面购物的会员，即可参加<a href="{{ path('jili_api_monthactivity_gatheringindex', {'l':6}) }}">抱团大作战</a>活动，最高可瓜分<strong>2,888,888</strong>米粒，该页面使用活动原则代替返利原则。
            </div>
             <div class="taobaoSearch"> {{ render(controller('JiliFrontendBundle:Taobao:searchBox' ) ) }} </div>
             <div id="tabs"> 
