--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
@@ -10,6 +10,7 @@
 	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
     <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
     <script src="{{ asset('js1408/jl.ui.jan.js')}}" type="text/javascript"></script>
+    <script src="//cdn.optimizely.com/js/2322420073.js"></script>
 </head>
 
 <body>
