--- a/web/css1408/jl.ui.help.css
+++ b/web/css1408/jl.ui.help.css
@@ -27,23 +27,9 @@
 .newGuideDetail h3{margin-top: 10px;line-height: 30px;font-size: 14px;font-weight: bold;}
 .newGuideDetail h3.active{ font-family: "微软雅黑";font-weight: bold;font-size: 16px;}
 .newGuideDetail li{color: #000;font-size: 12px;margin-top: 15px;}
-.newGuideDetail li p{line-height: 22px;}
-.newGuideDetail li strong{color: #fd6244;margin-right: 10px;display: inline-block;*display: inline;*zoom: 1; vertical-align: top;}
+.newGuideDetail li p{line-height: 25px;}
+.newGuideDetail li strong{color: #fd6244;margin-right: 10px;display: inline-block;*display: inline;*zoom: 1;}
 .newGuideDetail li a{color: #4c94ff;}
-.newGuideDetail li .guideImg{margin-top: 5px;}
-.taobao{ position: relative; z-index: 1;}
-.taobao li.arrows{ position: absolute; z-index: 1000; top:80px; left: 400px; width: 69px; height: 104px; background: url(../images1408/help/arrows.png) no-repeat top left;}
-.taobao li.arrow02{ top:490px; left: 245px; width: 109px; height: 132px; background-position: 0 -118px;}
-.taobao li.arrow03{ top:772px; left: 266px; width: 145px; height: 72px; background-position: 0 -275px;}
-.taobao strong{ width: 23px; height: 25px; background:  url(../images1408/help/numTitle.png) no-repeat top;}
-.taobao strong.icon02{ background-position: 0 -27px;}
-.taobao strong.icon03{ background-position: 0 -54px;}
-.taobao strong.icon04{ background-position: 0 -81px;}
-.taobao li p{ font-size: 14px; font-weight: bold; line-height: 25px;}
-.taobao li .guideImg{ margin-top: 15px; padding-left: 30px;}
-.taobao li .intro{ background-color: #f5f5f5; padding: 5px 20px 15px; width: 620px;}
-.taobao li .intro p{ font-size: 12px; font-weight: bold; line-height: 35px;}
-.intro .hasSpace{ margin-right: 30px;}
 .questions{padding: 20px 0;display: none;}
 .questions li{font-size: 0;}
 .questions li .question{font-size: 14px;padding-left: 20px;	height: 45px;line-height: 45px;	background-color: #f5f5f5;margin-bottom: 2px;cursor: pointer;}
@@ -55,3 +41,10 @@
 .questions li p strong{color: #eb411f;font-weight: normal;}
 .questions li p a{color: #4c94ff;}
 .submitTips{ position: absolute; z-index: 3000; top: 100px; left: 50%; margin-left: -80px; width: 160px; height: 35px; text-align: center; line-height: 35px; background-color: #fff; color: #333; font-size: 12px;}
+/*by wlt, 2015-1-21*/
+.taobao ul{ display: none;}
+.txt01, .txt02{ font-weight: bold; letter-spacing: 1px;}
+span.txt02{ color: #fd6244; background-color: #f1f1f1; height: 25px; line-height: 25px; padding: 0 10px; display: inline-block; *display: inline; *zoom: 1;}
+.channels{ margin-top: 10px; border-bottom: 3px solid #fd6244;}
+.channels span{ height: 25px; line-height: 25px; padding: 0 20px; margin-right: 5px; font-weight: bold; letter-spacing: 1px; color: #9e9e9e; background-color: #f1f1f1; border-radius: 3px 3px 0 0; display: inline-block; *display: inline; *zoom: 1; cursor: pointer;}
+.channels span.active{ color: #fff; background-color: #fd6244;}
