#640 预防丢单提示

--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -34,7 +34,7 @@
     </div>
     <div class="helpR borderGray fnRight">
     	<h2>新手上路</h2>
-        <ul class="newGuide">
+        <ul class="newGuide clearfix">
          	<li>
             	<p><img src="{{ asset('images1408/help/icon05.png') }}" width="99" height="99"/></p>
                 <dl>
@@ -76,6 +76,15 @@
                 </dl>
             </li>
         </ul>
+        <div class="shoppingTips">
+        	<div class="tipTxt"><strong>温馨提示：</strong>为了避免丢单的情况发生，建议下单前，先清除浏览器cookies<span>
+            <div class="tipHelp">
+            	<div class="helpT">如何清除浏览器Cookies? </div>
+                <p>以ie浏览器为例：<br/>选择工具栏—“工具”—“internet选项”，在“常规”卡中点击“删除”，点击“确定”。，即可清除浏览器历史记录。</p>
+                <div class="helpImg"><img src="{{ asset('images1408/help/clearCookie.jpg') }}" width="350"/></div>
+            </div>
+            <div class="tipArrow"></div></span></div>
+        </div>
         <div class="newGuideDetail fnHide">
         	<h3>购物返利享不停</h3>
             <ul class="taobao">
