--- a/web/css1408/jl.ui.help.css
+++ b/web/css1408/jl.ui.help.css
@@ -41,9 +41,18 @@
 .questions li p strong{color: #eb411f;font-weight: normal;}
 .questions li p a{color: #4c94ff;}
 .submitTips{ position: absolute; z-index: 3000; top: 100px; left: 50%; margin-left: -80px; width: 160px; height: 35px; text-align: center; line-height: 35px; background-color: #fff; color: #333; font-size: 12px;}
-/*by wlt, 2015-1-21*/
+/*by wlt, 2015-1-21, tips*/
 .txt01, .txt02{ font-weight: bold; letter-spacing: 1px;}
 span.txt02{ color: #fd6244; background-color: #f1f1f1; height: 25px; line-height: 25px; padding: 0 10px; display: inline-block; *display: inline; *zoom: 1;}
 .channels{ margin-top: 10px; border-bottom: 3px solid #fd6244;}
 .channels span{ height: 25px; line-height: 25px; padding: 0 15px; margin-right: 5px; font-weight: bold; letter-spacing: 1px; color: #9e9e9e; background-color: #f1f1f1; border-radius: 3px 3px 0 0; display: inline-block; *display: inline; *zoom: 1; cursor: pointer;}
 .channels span.active{ color: #fff; background-color: #fd6244;}
+.shoppingTips{ position: relative; z-index: 1; font-size: 12px; }
+.shoppingTips .tipTxt{ background-color: #f5f5f5; padding: 10px 20px; letter-spacing: 2px; line-height: 35px;}
+.shoppingTips .tipTxt strong{ font-family: "微软雅黑"; font-size: 14px; font-weight: bold; color: #f75232; padding-left: 18px; background:url(../images1408/help/icon00.png) no-repeat center left;}
+.shoppingTips .tipTxt span{ width: 20px; height: 35px; line-height: 35px; display: inline-block; *display: inline; *zoom: 1; vertical-align: top; cursor: pointer;background:url(../images1408/help/iconQ.png) no-repeat center left;}
+.shoppingTips .tipHelp{ position: absolute; z-index: 100; bottom: 43px; right: 0; background-color: #fffae3; padding: 10px 20px 15px; width: 350px; box-shadow: 1px 1px 3px #b4b3b3; display: none;}
+.tipArrow{ position: absolute; z-index: 200; bottom: 35px; right: 230px; width: 10px; height: 9px; background:url(../images1408/help/iconArrow.png) no-repeat; display: none;}
+.helpT{ color: #fd6244; font-weight: bold; letter-spacing: 1px; line-height: 25px;}
+.shoppingTips .tipHelp p{ line-height: 22px;}
+.helpImg{ margin-top: 3px;}
