--- a/web/css/adListNew.css
+++ b/web/css/adListNew.css
@@ -128,3 +128,6 @@ aside.offowAside{
 .offwowSubnav .subnavList a{ color:#333;}
 .offwowSubnav .subnavList a:hover,.offwowSubnav .subnavList a.now{ color:#e94d41;}
 .navNew{ position:absolute; top: -8px; left: 313px; z-index: -1;}
+/*by wlt, 2015-1-22*/
+.offer99Error{ position: relative; z-index: 1; width: 567px; height: 407px; margin: 0px auto; background:url(../images/under_construction.jpg) no-repeat center;}
+.offer99Error span{ position: absolute; z-index: 100; top: 150px; left: 260px; display: block; width: 265px; text-align: left; line-height: 28px; font-size: 16px; font-family: "微软雅黑";}
