--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -30,37 +30,6 @@
 </div>
 <div class="decMain">
     <div class="decMainCon">
-    {% if  date() < date("2015-1-20 00:00:00")  %}
-        <div class="luckyDraw clearfix">
-            {% if app.session.has('uid') %}
-            <div class="luckyDrawL">
-                <p>我当前拥有金蛋的个数：<strong class="eggNum"></strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney"></strong></p>
-                <div class="noStart"><img src="{{ asset('images/december/noegg.gif')}}" width="400" height="200" alt="您还没有金蛋哦"></div>
-                <div class="mask">
-                	<div class="hammer"></div>
-                    <ul class="goldenEggs clearfix">
-                    </ul>
-                </div>
-            </div> 
-            {% else %}
-            <div class="luckyDrawL">
-                <p>我当前拥有金蛋的个数：<strong class="eggNum">0</strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney">10元</strong></p>
-                <div class="noLogin"><img src="{{ asset('images/december/noegg.gif')}}" width="400" height="200" alt="您还没有金蛋哦"></div>
-            </div>
-            {% endif %}
-            <div class="luckyDrawR">
-                <div class="countDown">
-                    <label>距离砸金蛋时间仅剩下</label><span class="countDownTime"></span>
-                </div>
-                <div class="winnerList">                
-                    <h2>抢金蛋名单</h2>
-                    <div class="mask">
-						{% render(controller("JiliFrontendBundle:DecemberActivity:eggsSentStat") ) %}
-                   </div>
-                 </div>
-            </div>
-        </div>
-        {% else %}
         <div class="luckyDraw luckyDrawActive clearfix">
             {% if app.session.has('uid') %}
             <div class="luckyDrawL">
@@ -87,12 +56,8 @@
 						{% render(controller("JiliFrontendBundle:DecemberActivity:brokerList") ) %}
                     </div>
                  </div>
-                 <div class="countDown">
-                    <label>砸蛋还剩</label><span class="countDownTime"></span>
-                </div>
             </div>
         </div>
-         {% endif %}
         <div class="decList">
             {% set index_product = 0 %}
             {% for i, row in categorys %}
@@ -119,7 +84,42 @@
         </div>
     </div>
 </div>
-{% if  date() > date("2015-1-27 00:00:00")  %}
+<div class="decRule">
+	<div class="decRuleBtn">如何抢到金蛋<br/>>></div>
+	<div class="decRuleFlow boderBot">
+        <h2><em>●</em>抢金蛋流程</h2>
+        <div class="decRuleCon">
+            <p>第<span>1</span>步，当前<a href="javascript: void(0)" target="_blank">活动页面</a>购物或者到<a href="{{ path('jili_frontend_taobao_index') }}">淘宝专页</a>购物满<strong>10</strong>元</p>
+            <p>
+            	第<span>2</span>步，填写如下表单
+                <div class="formWrapper">{% render(controller("JiliFrontendBundle:DecemberActivity:addTaobaoOrder") ) %}</div>
+            </p>
+        </div>
+    </div>
+    <div class="decRuleMain boderBot">
+        <h2><em>●</em>抢金蛋<em class="decTime"></em></h2>
+        <ul>
+        	<li>> 购物活动期间，通过积粒网去淘宝购物累计满10元能获得1次抽奖机会，满50元能获得3次抽奖机会，满150元能获得5次抽奖机会。之后每增加50元就有机会多获得1次抽奖机会。</li>
+            <li>> 用户完成购物后，需通过以上表单提交该次交易的淘宝订单号及相关信息方便客服确认交易的有效性（注：因淘宝订单确认时间较长，<em class="corRed">客服审核周期为10天左右</em>，请耐心等待）</li>
+            <li>> 不提交订单号的场合将视为用户自动放弃该笔交易</li>
+        </ul>
+    </div>
+    <div class="decAwardMain">
+        <h2><em>●</em>砸金蛋<em class="decTime"></em></h2>
+        	<table class="awardDetail" width="350" cellpadding="0" cellspacing="0">
+            	<tbody>
+                	<tr><td class="dist">级别</td><td class="dist">奖金数（米粒）</td><td class="dist">奖励名额</td></tr>
+                    <tr><td>一等奖</td><td>8888</td><td>20</td></tr>
+                    <tr><td class="dist">二等奖</td><td class="dist">888</td><td class="dist">200</td></tr>
+                    <tr><td>三等奖</td><td>88</td><td>1000</td></tr>
+                    <tr><td class="dist">四等奖</td><td class="dist">8</td><td class="dist">10000</td></tr>
+                    <tr><td>安慰奖</td><td>1</td><td>10000</td></tr>
+                </tbody>
+            </table>
+            <p>注：最终奖励名额可根据实际情况进行调整。<br/>积粒网保留在法律规定的范围内对上述规则进行解释的权利。</p>
+    </div>
+</div>
+{% if  date() > date("2016-1-22 00:00:00")  %}
     <div class="fixMask"></div>
     <div class="endBreak"><div><span class="close"></span><div class="conclusion">来晚一步，砸金蛋活动已经结束了。</div></div></div>
 {% else %}
