--- a/web/css/jl.ui.Dec.css
+++ b/web/css/jl.ui.Dec.css
@@ -111,3 +111,4 @@ a{ color: #fff;}
 .endBreak{ position: fixed; z-index: 9999; width: 990px; left: 50%; margin-left: -495px; top: 0;}
 .endBreak .conclusion{ position: absolute; z-index: 10000; top: 150px; left: 300px; width: 270px; padding: 50px 10px 50px 145px; color: #492109; font-size: 16px; font-weight: bold; line-height: 30px;  background: #fff url(../images/december/endBreak.jpg) no-repeat; border: 3px solid #d6d6d6;}
 .endBreak .close{ position: absolute; z-index: 10000; top: 10px; right: 0; width: 27px; height: 27px; background: url(../images/taobao/close.png) no-repeat; cursor: pointer;}
+/*by wlt, 2015-1-23*/
