--- a/src/Jili/ApiBundle/Resources/views/User/weiboFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/weiboFirstLogin.html.twig
@@ -74,7 +74,7 @@
                                 {#endif#}
                             </div>
                             <div class="qqPic">
-                                <img src="/images140307/taobaoPic.jpg" width="343" height="100"/>
+                                <img src="/images140307/weiboPic.jpg" width="343" height="100"/>
                             </div>
                             <div class="clear"></div>
                         </div>
