--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -90,8 +90,8 @@
             <li>
             	<p>第<span>1</span>步，抢金蛋</p>
                 <div>
-                	<p>在<a href="javascript: void(0)" target="_blank">当前页面</a>购物或者到<a href="{{ path('jili_frontend_taobao_index') }}">淘宝专页</a>购物</p>
-					<p>购物满10元可得1个金蛋，满50元可得3个金蛋，满150元可得5个金蛋。之后每增加50元就可多得1个金蛋。</p>
+                	<p>在<a href="javascript: void(0);">当前页面</a>购物或者到<a href="{{ path('jili_frontend_taobao_index') }}">淘宝专页</a>购物</p>
+					<p>购物每满10元可得1个金蛋，满20元可得2个金蛋，满30元可得3个金蛋，以此类推，每增加10元就可多得1个金蛋。</p>
                 </div>
             </li>
             <li>
@@ -100,7 +100,7 @@
             </li>
             <li>
             	<p>第<span>3</span>步，砸金蛋</p>
-               	<div>一等奖<strong>8888</strong>米粒，二等奖<strong>888</strong>米粒，三等奖<strong>88</strong>米粒，还有更多奖励名额等你拿！</div>
+               	<div>一等奖<strong>8888</strong>米粒，二等奖<strong>888</strong>米粒，三等奖<strong>88</strong>米粒，还有更多奖励名额等你来拿！</div>
             </li>
         </ul>
     </div>
