--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/recent_brokers_stat.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/recent_brokers_stat.html.twig
@@ -1,6 +1,6 @@
     <ul>
         <!--  {{ ts|date("Y-m-d H:i:s")  }}-->
         {% for breakerInfo  in breakersInfo %}
-        <li>{{ breakerInfo.nick[:3]}}**刚刚砸了一个蛋，获得{{ breakerInfo.pointsAcquried }}米粒</li>
+        <li>{{ breakerInfo.nick[:3]}}**刚刚砸了一个蛋，获得{{ breakerInfo.pointsAcquired }}米粒</li>
         {% endfor %}
     </ul>
