--- a/src/Jili/ApiBundle/Resources/views/User/weiboFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/weiboFirstLogin.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>积粒网-微博账号注册</title>
+        <title>积粒网-新浪微博账号注册</title>
         {% include 'JiliApiBundle::seo.html.twig' %}
         <!-- [if lt IE9] -->
         <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
@@ -19,7 +19,7 @@
         <div class="webArticle regStep">
             <article>
                 <div class="regForm qqRegForm" style="padding-top:100px;">
-                    <h2 class="fontYH">尊敬的微博会员，欢迎来到积粒网！</h2>
+                    <h2 class="fontYH">尊敬的新浪微博会员，欢迎来到积粒网！</h2>
                     <div>
                         <ul>
                             <li>您的基本信息</li>
