--- a/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
@@ -10,7 +10,7 @@
     <link href="{{ asset('css1408/jl.ui.landing.css') }} " rel="stylesheet" type="text/css">
     <script src="{{ asset('js/jquery-1.7.js') }}" language="javascript"></script>
 	<script src="{{ asset('js/html5.js') }}" type="text/javascript"></script> 
-    <script src="{{ asset('js1408/jl.ui.login.js') }}" language="javascript"></script>
+    <script src="{{ asset('js1408/jl.ui.landing.js') }}" language="javascript"></script>
 </head>
 <body>
     <header>
