--- a/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
@@ -17,7 +17,7 @@
     	<div class="header">
             <div class="headerTop w1000">
                 <a href="{{ path('_homepage') }}" class="logo"><img src="{{ asset('images1408/lp/logo_landing.png') }}" width="176" height="56" alt="91积粒网" title="91积粒网"/></a>
-                <span class="payroll">积粒网截止目前累计发放<b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b>元人民币</span>
+                <span class="payroll">积粒网截止目前累计发放<b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b><b class="digits"><span></span></b>元人民币</span>
                 <span class="tips">已有积粒网账号，<a href="{{ path('_user_login') }}">直接登录</a></span>
             </div>
             <div class="headerCon w1000 clearfix">
@@ -29,7 +29,7 @@
                         <li><a href="{{ path('weibo_api_login') }}"><img src="{{ asset('images1408/lp/register3.png') }}" width="120" height="46" alt="微博登录" title="微博登录"/></a></li>
                     </ul>
                 </div>
-                <div class="headerConR fnRight"><a href="#"><img src="{{ asset('images1408/lp/slogan.png') }}" width="527" height="221" alt="轻松积米粒，快乐换奖励！" title="轻松积米粒，快乐换奖励！"/></a></div>
+                <div class="headerConR fnRight"><a href="{{ path('_homepage') }}"><img src="{{ asset('images1408/lp/slogan.png') }}" width="527" height="221" alt="轻松积米粒，快乐换奖励！" title="轻松积米粒，快乐换奖励！"/></a></div>
             </div>
         </div>
     </header> 
