--- a/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
@@ -56,6 +56,7 @@
                 <p>做做小问卷、玩玩游戏也能拿米粒！这种好事哪里找！</p>
             </li>
         </ul>
+        <div class="btn"><a href="{{ path('_user_reg') }}" class="registerBtn">我已了解，现在就去注册</a></div>
     </div>           
 {% include 'JiliApiBundle::footer.html.twig' %} 
 </body>
