--- a/web/css1408/jl.ui.landing.css
+++ b/web/css1408/jl.ui.landing.css
@@ -5,7 +5,7 @@ header{ width: 100%; background: #ffda34 url(../images1408/lp/shade1.png); borde
 .logo, .payroll, .tips{ position: absolute; z-index: 100; top: 0;}
 .logo{ left: 0;}
 .payroll{ top: 32px; right: 245px; font-size: 14px; font-family: "微软雅黑"; height: 20px; line-height: 20px;}
-.payroll b, .payroll b span{ display: inline-block; *display: inline; *zoom: 1; vertical-align: top;}
+.payroll b, .payroll b span, .registerBtn{ display: inline-block; *display: inline; *zoom: 1; vertical-align: top;}
 .payroll b{ position: relative; z-index: 2; width: 15px; height: 20px; background-color: #000; margin-right: 1px; overflow: hidden;}
 .payroll b span{ position: absolute; z-index: 100; width: 15px; height: 200px; top: 0; left: 0; background: url(../images1408/lp/num.png) no-repeat center; }
 .tips{ top: 35px; right: 20px; width: 150px;}
@@ -14,8 +14,8 @@ header{ width: 100%; background: #ffda34 url(../images1408/lp/shade1.png); borde
 .headerConL{ padding-left: 20px;}
 .headerConL li{ float: left; padding-right: 15px; padding-bottom: 20px; background: url(../images1408/lp/btnShadow.png) no-repeat left bottom;}
 .headerConR{ padding-top: 10px;}
-.main{ background: url(../images1408/lp/path.png) no-repeat center top; height: 1537px; padding-bottom: 50px;}
-.mainCon{ position: relative; z-index: 1; font-family: "微软雅黑";}
+.main{ background: url(../images1408/lp/path.png) no-repeat center top; padding-bottom: 50px;}
+.mainCon{ position: relative; z-index: 1; font-family: "微软雅黑"; height: 1629px;}
 .mainCon li{ position: absolute; z-index: 100; top: 160px; right: 180px; width: 240px;}
 .mainCon li h3{ font-size: 32px; font-weight: bold; color: #572300; line-height: 55px; height: 55px;}
 .mainCon li p{ font-size:14px; color: #612700;}
@@ -23,6 +23,8 @@ header{ width: 100%; background: #ffda34 url(../images1408/lp/shade1.png); borde
 .mainCon li.step3{ top: 804px; right: 180px;}
 .mainCon li.step4{ top: 1105px; left: 190px;}
 .mainCon li.step5{ top: 1405px; right: 180px;}
+.btn{ text-align: center;}
+.registerBtn{ margin-top: 15px; width:464px; text-align: center; height: 47px; line-height: 45px; color: #fff; background-color: #ffb21e; font-size: 18px; font-weight: bold; font-family: "微软雅黑"; border-radius: 3px; box-shadow: 0 4px #d68b00; letter-spacing: 1px;}
 /*footer*/
 footer{
 	color:#666;
