--- a/web/css1408/jl.ui.home.css
+++ b/web/css1408/jl.ui.home.css
@@ -330,12 +330,12 @@ div.loginArea{
 	*+vertical-align: -2px;
 }
 .loginArea .weiboIcon{
-	width:18px; 
-	height:16px;
-	background:url(../images1408/icons.png) no-repeat 0 -422px;
+	width:86px; 
+	height:18px;
+	background:url(../images1408/loginbtn_sinawb.png) no-repeat 0 0;
 	display: inline-block;
-	vertical-align: -2px;
-	*+vertical-align: -2px;
+	vertical-align: -3px;
+	*+vertical-align: -3px;
         *margin-left:5px;
 }
 a.register{
