--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
@@ -11,12 +11,14 @@
     <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
     <script src="{{ asset('js1408/jl.ui.jan.js')}}" type="text/javascript"></script>
     <script src="//cdn.optimizely.com/js/2322420073.js"></script>
+    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
 <div class="top">
 	<div class="topCon">
     	<div class="logo fl"><a href="{{ path('_homepage') }}" title="积粒网"><img src="{{ asset('images/january/91jiliLogo.png')}}" width="118" height="34" alt="积粒网logo"/></a></div>
+        <wb:share-button class="weiboshare fl" addition="simple" type="button" ralateUid="3572980047" default_text="抱团大作战，最高瓜分2,888,888米粒！"></wb:share-button>
         {% if app.session.has('uid') %}
         	<div class="userInfo fr">{{ app.session.get('nick') }},[<a href="{{ path('_user_logout') }}">退出</a>]</div>
         {% else %}
