--- a/web/css/jl.ui.Jan.css
+++ b/web/css/jl.ui.Jan.css
@@ -11,6 +11,7 @@ body{font-size:12px;color: #333;font-family:'微软雅黑', Arial, Helvetica, sa
 a{text-decoration:none;color:#3399ff;}
 .topCon, .mainTopCon, .con{ width: 990px; margin: 0 auto;}
 .topCon{ height: 36px; overflow: hidden; margin-top: 2px;}
+.topCon .weiboshare{ margin-left: 13px; margin-top: 5px;}
 .userInfo{ height: 35px; line-height: 35px; font-family: "宋体";}
 .main{ background-color: #f81e1d;}
 .mainTop{ background: #f81e1d url(../images/january/bannerBg.jpg) no-repeat center; }
